fix: ensure text stays visible during webfont load

--- a/src/globals.css
+++ b/src/globals.css
@@ -7,6 +7,7 @@
 	src: url("/fonts/JetBrainsMono-VF.woff2") format("woff2");
 	font-weight: 100 800;
 	font-stretch: 25% 151%;
+	font-display: swap;
 }
 @font-face {
 	font-family: "JetBrains Mono";
@@ -14,6 +15,7 @@
 	font-style: italic;
 	font-weight: 100 800;
 	font-stretch: 25% 151%;
+	font-display: swap;
 }
 
 * {
